<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_marginStart="15dp"
    android:layout_marginLeft="15dp"
    android:layout_marginEnd="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginTop="15dp"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_constraintTop_toBottomOf="@+id/app_bar"
    app:layout_constraintBottom_toBottomOf="parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:text="@string/title"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etTitle"
        android:hint="@string/input_title_here"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:padding="10dp"
        android:background="@drawable/edit_text_border_black"
        android:layout_marginTop="10dp"
        android:maxLength="30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitleValidation"
        android:text="@string/title_validation"
        android:textSize="15sp"
        android:visibility="gone"
        android:gravity="start"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:text="@string/image"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etIcon"
        android:hint="@string/input_url"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:padding="10dp"
        android:background="@drawable/edit_text_border_black"
        android:layout_marginTop="10dp"
        android:maxLength="30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:text="@string/desc"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etDesc"
        android:hint="@string/input_description"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:padding="10dp"
        android:background="@drawable/edit_text_border_black"
        android:layout_marginTop="10dp"
        android:maxLength="200"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCreate"
        android:text="@string/create"
        android:background="@drawable/button_border_black_blue"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="50dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSave"
        android:text="@string/save"
        android:visibility="gone"
        android:background="@drawable/button_border_black_blue"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="50dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

</androidx.appcompat.widget.LinearLayoutCompat>